templates/base/deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: __PROJECT_NAME__-service
  namespace: wizeworks
  labels:
    app: __PROJECT_NAME__
spec:
  selector:
    app: __PROJECT_NAME__
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
